fixing spacing issue

--- a/docs/styles/home.css
+++ b/docs/styles/home.css
@@ -1,9 +1,7 @@
 body {
   background-color: rgb(30, 30, 30);
-  display: flex;
   justify-content: center;
   font-family: "Cabin", sans-serif;
-  flex-direction: column;
   margin: 0px;
   padding-bottom: 100px;
   min-height: 100vh;
@@ -18,7 +16,7 @@ body {
 .header {
   display: flex;
   justify-content: center;
-  margin: 50px 0px 40px;
+  padding: 50px 0px 40px;
 }
 
 .footer {
